# nmt-fastapi-reference-web

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  alembic.ini  changelog.j2  generate-api-hash.py  nmtfast-config-default.yaml  pyproject.toml  tasks.py
.github/actions/fix-docstring-parser/: action.yml
.github/actions/install-deps/: action.yml
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml  main-pr-active.yml  main-pr-closed.yml
alembic/: env.py
alembic/versions/: cb1902fe9e48_initial_migration.py
docker/: Dockerfile  entrypoint.sh  nginx.conf  supervisord.conf
samples/: docker-compose.yaml  nmt-fastapi-reference.code-workspace  poetry.toml
samples/.local/: activate.env
src/app/: main.py  task_loader.py
src/app/core/v1/: auth.py  cache.py  discovery.py  health.py  kafka.py  mongo.py  resources.py  settings.py  sqlalchemy.py  tasks.py
src/app/dependencies/v1/: api_client.py  auth.py  cache.py  discovery.py  kafka.py  mongo.py  preferences.py  session.py  settings.py  sqlalchemy.py  templates.py
src/app/errors/v1/: exception_handlers.py  exceptions.py
src/app/events/v1/: kafka_demo.py
src/app/layers/repository/v1/: gadgets.py  user_settings.py  widgets.py
src/app/layers/router/v1/: gadgets.py  health.py  login.py  main.py  upstream.py  user_settings.py  widgets.py
src/app/layers/service/v1/: gadgets.py  health.py  login.py  main.py  upstream.py  user_settings.py  web_user_settings.py  widgets.py
src/app/schemas/dto/v1/: gadgets.py  user_settings.py  widgets.py
src/app/schemas/odm/v1/: user_settings.py  users.py
src/app/schemas/orm/v1/: widgets.py
src/app/tasks/v1/: gadgets.py  placeholder.py  widgets.py
src/app/templates/v1/: index.html  login.html
src/app/templates/v1/partials/: dashboard.html
src/app/templates/v1/partials/settings/: general.html
src/app/utils/v1/: gadgets.py  widgets.py
tests/: conftest.py  test_main.py  test_task_loader.py
tests/core/v1/: test_auth.py  test_discovery.py  test_health.py  test_kafka.py  test_mongo.py  test_settings.py  test_sqlalchemy.py
tests/dependencies/v1/: conftest.py  test_api_client.py  test_auth.py  test_cache.py  test_discovery.py  test_kafka.py  test_mongo.py  test_preferences.py  test_session.py  test_settings.py  test_sqlalchemy.py
tests/errors/v1/: test_exception_handlers.py  test_exceptions.py
tests/layers/repository/v1/: conftest.py  test_gadgets.py  test_user_settings.py  test_widgets.py
tests/layers/router/v1/: conftest.py  test_gadgets.py  test_health.py  test_login.py  test_main.py  test_upstream.py  test_user_settings.py  test_widgets.py
tests/layers/service/v1/: conftest.py  test_gadgets.py  test_health.py  test_login.py  test_main.py  test_upstream.py  test_user_settings.py  test_web_user_settings.py  test_widgets.py
tests/tasks/v1/: conftest.py  test_gadgets.py  test_placeholder.py  test_widgets.py
